--- a/jukebox.local/mpd.conf
+++ b/jukebox.local/mpd.conf
@@ -65,7 +65,7 @@ sticker_file                   "/home/vagrant/sites/jukebox.local/mpd/sticker.sq
 # initialization. This setting is disabled by default and MPD is run as the
 # current user.
 #
-user				"vagrant"
+user				"root"
 #
 # This setting specifies the group that MPD will run as. If not specified
 # primary group of user specified with "user" setting will be used (if set).
@@ -89,7 +89,7 @@ bind_to_address		"localhost"
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
 #
-#port				"6600"
+port				"6600"
 #
 # This setting controls the type of information which is logged. Available 
 # setting arguments are "default", "secure" or "verbose". The "verbose" setting
@@ -169,7 +169,7 @@ bind_to_address		"localhost"
 # If this setting is set, MPD will require password authorization. The password
 # can setting can be specified multiple times for different password profiles.
 #
-#password                        "password@read,add,control,admin"
+password                        "5!r$OLPeCv#h1v1!@read,add,control,admin"
 #
 # This setting specifies the permissions a user has who has not yet logged in. 
 #
