--- a/jukebox.local/composer.json
+++ b/jukebox.local/composer.json
@@ -16,7 +16,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "rcrowe/twigbridge": "^0.9.2",
-        "dcarrith/lxmpd": "^1.0@dev",
+        "wardcraigj/lxmpd": "^1.0@dev",
         "barryvdh/laravel-ide-helper": "^2.2"
     },
     "require-dev": {
