--- a/jukebox.local/composer.json
+++ b/jukebox.local/composer.json
@@ -16,7 +16,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "rcrowe/twigbridge": "^0.9.2",
-        "wardcraigj/lxmpd": "dev-master",
+        "wardcraigj/lxmpd": "dev-jukebox-changes",
         "barryvdh/laravel-ide-helper": "^2.2"
     },
     "require-dev": {
