--- a/jukebox.local/composer.json
+++ b/jukebox.local/composer.json
@@ -16,15 +16,15 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "rcrowe/twigbridge": "^0.9.2",
-        "wardcraigj/lxmpd": "dev-jukebox-changes",
-        "barryvdh/laravel-ide-helper": "^2.2"
+        "wardcraigj/lxmpd": "dev-jukebox-changes"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "barryvdh/laravel-ide-helper": "^2.2"
     },
     "autoload": {
         "classmap": [
