--- a/jukebox.local/composer.json
+++ b/jukebox.local/composer.json
@@ -16,7 +16,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "rcrowe/twigbridge": "^0.9.2",
-        "wardcraigj/lxmpd": "dev-jukebox-changes"
+        "wardcraigj/lxmpd": "dev-jukebox-changes",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
